# tuicode

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HARNESS_SETUP.md  LICENSE  README.md  README_CN.md  package-lock.json  pyproject.toml
.claude/: settings.json
.codex/: config.toml  hooks.json
.cursor/: hooks.json
.cursor/rules/: karpathy-guidelines.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
.harness/: SESSION_END.md  SESSION_START.md
.harness/hooks/: commit-msg  guard-dangerous.sh  post-write.sh  session-end-codex.sh  session-end.sh  session-start.sh
.harness/product/: backlog.md
.harness/registry/: _index.md
.harness/registry/decisions/: 2026-05-28-observability-first.md  2026-05-31-windows-compat.md  init.md
.harness/registry/sessions/: 2026-05-26-1900.md  2026-05-26-2200.md  2026-05-27-0000.md  2026-05-27-0130.md  2026-05-27-0400.md  2026-05-27-0700.md  2026-05-27-1030.md  2026-05-28-0145.md  2026-05-28-1604.md  2026-05-28-1608.md  2026-05-28-1628.md  2026-05-29-build.md  2026-05-30-2150.md  2026-06-01-1452.md
.harness/state/: current-sprint.md  features.json
.opencode/plugin/: harness-opencode-plugin.ts
demo/: tui_demo.py
docs/: agentdeck_architecture.md  tuicode_architecture.md  ui_ux_optimization_proposals.md
skills/: ai-interface-design.SKILL.md  texual-tui-design-v2.skill.md  texual-tui-design.skill.md
src/agentdeck/: __main__.py  agent_protocol.py  app.py  bus.py  events.py
src/agentdeck/ui/: editor_window.py  float_window.py  menu_bar.py  pty_terminal.py  right_panel.py  status_bar.py  taskbar.py  terminal_strip.py  workspace.py
src/tuicode/: __main__.py  agent_memory.py  agent_protocol.py  app.py  bus.py  clipboard.py  git_diff.py  git_status.py  i18n.py  workspace_state.py  workspace_watcher.py
src/tuicode/ui/: agent_session_modal.py  agent_terminal_window.py  command_palette_modal.py  diff_preview_window.py  editor_window.py  file_modals.py  file_tree.py  float_window.py  mascot.py  menu_bar.py  new_agent_modal.py  (+6 more)
tests/: conftest.py  test_agent_launcher.py  test_agent_memory.py  test_agent_protocol.py  test_agent_terminal_window.py  test_app_integration.py  test_bus.py  test_command_palette.py  test_diff_preview_window.py  test_editor_window.py  test_file_ops.py  test_file_tree.py  test_float_window.py  test_git_diff.py  test_git_status.py  test_layout_preset.py  test_mascot.py  test_pty_terminal.py  test_taskbar.py  test_terminal_strip.py  test_workspace_state.py  test_workspace_watcher.py
