[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuicode"
version = "0.1.0"
description = "AI 编程智能体的 TUI 宿主环境"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "深圳市玄熵智能科技有限责任公司" }]
requires-python = ">=3.11"
dependencies = [
    "textual[syntax]>=0.60.0",
    "pyte>=0.8.0",
]

[project.scripts]
tuicode = "tuicode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tuicode"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
